--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,39 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+/* Media Query Styles*/
+@media (max-width: 500px) {
+    .title-container div {
+        max-width: 100%;
+        height: 30vh;
+        background-size: cover;
+    }
+    h1 {
+        font-size: 3.5rem;
+        font-weight: bold;
+    }
+    button {
+        border-radius: 0;
+    }
+    nav a {
+        font-size: 1.5rem;
+        margin: 2rem;
+    }
+    .artists-container {
+        flex-direction: column;
+        align-items: center;
+        width: 100%
+    }
+    .artist {
+        font-size: 1rem;
+    }
+    .bio {
+        width: 100%;
+        font-size: .75rem;
+    }
+    .artist img {
+        width: 100%;
+        height: 15vh;
+    }
+}
